--- a/Ved-Organic/Pages/Registration.razor
+++ b/Ved-Organic/Pages/Registration.razor
@@ -7,7 +7,7 @@
 <h5 style="color:blue;  text-align:center">Create New Account</h5>
    
     <div style="display:grid;align-items:center;justify-items:center;">
-        <EditForm  style="box-shadow:0px 0px 2px black; padding:2em; width:50vw;" Model="@user" OnValidSubmit="@Insert">
+        <EditForm  style="box-shadow:0px 0px 2px black; padding:2em; width:50vw;" Model="@user" >
              <DataAnnotationsValidator />
             <div class="form-group">
                 <InputText @bind-Value="user.Name"  class="form-control"  placeholder="Name"/>
@@ -88,18 +88,14 @@
    </div>     
               <div class="w3-bar">
                 <button type="submit" class="btn btn-primary" @onclick="@Insert">Register</button>
-                 <button type="button" class="btn btn-secondary" href="/">Cancel</button>
+                     <input type="button" class="btn btn-secondary" @onclick="@Cancel" value="Cancel" /> 
   </div>   
         </EditForm>
    
     </div>
 
 
-<div>
-    <span>
-        
-    </span>
-</div>
+
 @code {
     
         UserInfo user = new UserInfo();
@@ -109,6 +105,8 @@
         private void OnChange(ChangeEventArgs args) {
             user.Business = bool.Parse(args.Value.ToString());
         }
-    
-
+    void Cancel()  
+    {  
+        NavigationManager.NavigateTo("Login");  
+    }  
 }
