--- a/Ved-Organic/Pages/Index.razor
+++ b/Ved-Organic/Pages/Index.razor
@@ -3,5 +3,5 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-
+<a href="/Registration">Registration</a>
 <SurveyPrompt Title="How is Blazor working for you?" />
