--- a/Ved-Organic/Pages/Registration.razor
+++ b/Ved-Organic/Pages/Registration.razor
@@ -29,8 +29,8 @@
                  <ValidationMessage For="@(() => user.Password)" />
                  </div>
                  <div class="col">
-       <InputText @bind-Value="user.Password" class="form-control col" type="text"  name="" placeholder="Confirm Password"/> 
-        <ValidationMessage For="@(() => user.Password)" />
+       <InputText @bind-Value="user.ConfirmPassword" class="form-control col" type="text"  name="" placeholder="Confirm Password"/> 
+        <ValidationMessage For="@(() => user.ConfirmPassword)" />
    </div>
    </div>         
    </div>
