--- a/Ved-Organic/Shared/MainLayout.razor
+++ b/Ved-Organic/Shared/MainLayout.razor
@@ -2,7 +2,10 @@
 
 
 <div class="main">
-    
+   <div class="top-row px-4">
+        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    </div>
+
 
     <div class="content px-4">
         @Body
