--- a/Ved-Organic/Shared/MainLayout.razor
+++ b/Ved-Organic/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using Ved_Organic.Data
+@inject Blazored.SessionStorage.ISessionStorageService session
 
 
 <div class="main">
@@ -6,7 +8,7 @@
         <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
     </div>
 
-
+}
     <div class="content px-4">
         @Body
     </div>
