--- a/Ved-Organic/Pages/Index.razor
+++ b/Ved-Organic/Pages/Index.razor
@@ -1,33 +1,46 @@
 ﻿@page "/Index"
-@using Ved_Organic.Data
-@using Microsoft.AspNetCore.Http
-@inject UserServiceDapper UserService
-@inject Blazored.SessionStorage.ISessionStorageService session
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Components.Authorization
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
-<div>
-@if(@user!=null)
-{
-@if(@user.PermissionString=="All")
-{
-<p>Hello, Admin</p>
-}
-@if(user.PermissionString=="Limited"){
-    <p>Hello, @user.UserName</p>
-}
-}
-</div>
+<h3>ClaimsPrincipal Data</h3>
 
-@code{
-    public LoginResponse user;
- 
-    protected override async Task OnInitializedAsync()
+<button @onclick="GetClaimsPrincipalData">Get ClaimsPrincipal Data</button>
+
+<p>@_authMessage</p>
+
+@if (_claims.Count() > 0)
+{
+    <ul>
+        @foreach (var claim in _claims)
+        {
+            <li>@claim.Type: @claim.Value</li>
+        }
+    </ul>
+}
+
+<p>@_surnameMessage</p>
+
+@code {
+    private string _authMessage;
+    private string _surnameMessage;
+    private IEnumerable<Claim> _claims = Enumerable.Empty<Claim>();
+
+    private async Task GetClaimsPrincipalData()
     {
-         user = await session.GetItemAsync<LoginResponse>("SessionUser");
-        
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (user.Identity.IsAuthenticated)
+        {
+            _authMessage = $"{user.Identity.Name} is authenticated.";
+            _claims = user.Claims;
+            _surnameMessage = 
+                $"Surname: {user.FindFirst(c => c.Type == ClaimTypes.Surname)?.Value}";
+        }
+        else
+        {
+            _authMessage = "The user is NOT authenticated.";
+        }
     }
-
-
-
-    
-
 }
